[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true


[project]
name = "urpf"
version = "0.0.0"
description = "uRPF simulations along with BAR-SAV"
readme = "README.md"
authors = [
    {name = "Justin Furuness", email = "jfuruness@gmail.com"},
    {name = "Cameron Morris", email = "cameron.morris@uconn.edu"},
    {name = "Reynaldo Morillo", email = "reynaldo.morillo@uconn.edu"}
]
license = {file = "LICENSE.txt"}
keywords = [
    "BGPy",
    "bgpy",
    "urpf",
    "bgpc",
    "urpf",
    "BGP",
    "Caida",
    "CAIDA",
    "Peers",
    "Providers",
    "Relationships",
    "AS-Serial",
    "Customers",
    "Simulation",
    "ROV",
    "spoofer",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers"
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/jfuruness/urpf"
Documentation = "https://github.com/jfuruness/urpf/README.md"

[project.scripts]
urpf = "urpf.__main__:main"

[project.optional-dependencies]
test = [
]

[tool.setuptools.dynamic]
python_requires = ">= 3.10"
packages = {find = true}
zip_safe = false
include_package_data = true

# https://stackoverflow.com/a/76214408/8903959
[tool.setuptools.package-data]
"urpf" = ["py.typed"]

# https://stackoverflow.com/a/76214408/8903959
[tool.setuptools.packages.find]
where = ["urpf"]

[tool.pytest.ini_options]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]
# addopts = "-m 'not slow'"  # -n 6
markers = [
    "slow",  # All slow tests
]
filterwarnings = [
    "ignore::DeprecationWarning:yamlable",
]

[tool.mypy]
mypy_path = "urpf"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 88

[tool.coverage.run]
branch = true
omit = [
    "*tests*",
    "*__init__*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Excludes lines overrides pragma: no cover, so add it back
    "pragma: no cover",
    # Code below this is not meant to be tested
    "raise NotImplementedError",
    # Code that isn't meant to be run
    "if __name__ == .__main__.:"
]
